<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/puprple"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/judul"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/bg_menu"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="24dp"
        android:paddingRight="16dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_weight="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_green"
                    android:onClick="keProfile">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/prof" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="@string/profile"
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="keKopetensi">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_red">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/bg_round"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/kompetensi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:text="@string/kopetensi"
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_kuning">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/bg_round"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/ref" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="0dp"
                        android:text="@string/referensi"
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_biru"
                    android:onClick="keMateri">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/bg_round"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/materi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="@string/materi"
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_indigo">

                    <ImageView
                        android:layout_width="42dp"
                        android:background="@drawable/bg_round"
                        android:layout_height="42dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/game" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="@string/games"
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_cyan">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/bg_round"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/eva" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="0dp"
                        android:text="@string/evaluasi"
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>